[package]
name = "stress"
version = "0.1.0"
authors = ["Chris Zehner <cbzehner@gmail.com>"]
description = "Put your programs to the test. Run a command multiple times and get back a summary of its exit codes."
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
repository = "https://github.com/cbzehner/stress"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "https://github.com/cbzehner/stress" }
is-it-maintained-open-issues = { repository = "https://github.com/cbzehner/stress" }

[dependencies]
structopt = "0.3.15"
